Create eight classes of weight status

--- a/bmiCalculator.html
+++ b/bmiCalculator.html
@@ -9,8 +9,8 @@
   <h1>BMI Calculator</h1>
 
   <form action="/" method="post">
-    <input type="text" name="weight" placeholder="Enter your weight">
-    <input type="text" name="height" placeholder="Enter your height">
+    <input type="text" name="weight" placeholder="Enter your weight in kg">
+    <input type="text" name="height" placeholder="Enter your height in cm">
     <button type="submit" name="submit">Calculate BMI</button>
   </form>
   
